# simple-image-processor

./: CMakeLists.txt  README.md  convertible_image.cp312-win_amd64.pyd  gaussian_blur.cp312-win_amd64.pyd  image_processor.cp312-win_amd64.pyd  image_processor.py
src/: convertible_image.cpp  convertible_image.h  gaussian_blur.cpp  gaussian_blur.h
